  say how or when to configure it, or how to turn it off.

- On Unix, a shared libpython2.3.so can be created with --enable-shared.

- All uses of the CACHE_HASH, INTERN_STRINGS, and DONT_SHARE_SHORT_STRINGS
  preprocessor symbols were eliminated.  The internal decisions they
  controlled stopped being experimental long ago.

C API

- The type of tp_free has been changed from "void (*)(PyObject *)" to
  "void (*)(void *)".

- PyObject_Del, PyObject_GC_Del are now functions instead of macros.

- A type can now inherit its metatype from its base type.  Previously,
  when PyType_Ready() was called, if ob_type was found to be NULL, it
  was always set to &PyType_Type; now it is set to base->ob_type,
  where base is tp_base, defaulting to &PyObject_Type.

- PyType_Ready() accidentally did not inherit tp_is_gc; now it does.

- Objects allocated using the new PyMalloc_New and PyMalloc_NewVar
  functions will be allocated using pymalloc if it is enabled.  These
  objects should be deallocated using PyMalloc_Del.  The PyObject_{New,
  NewVar,NEW_VAR,Del,DEL} APIs have been changed to always use
  PyMem_MALLOC and PyMem_FREE, even if pymalloc is enabled.  The
  PyCore_* family of APIs have been removed.

- The "u#" parser marker will now pass through Unicode object as-is
  without going through the buffer API.

- The enumerators of cmp_op have been renamed to use the prefix PyCmp_.

- An old #define of ANY as void has been removed from pyport.h.  This
  hasn't been used since Python's pre-ANSI days, and the #define has
  been marked as obsolete since then.  SF bug 495548 says it created
  conflicts with other packages, so keeping it around wasn't harmless.

- Because Python's magic number scheme broke on January 1st, we decided
  to stop Python development.  Thanks for all the fish!

- Some of us don't like fish, so we changed Python's magic number
  scheme to a new one. See Python/import.c for details.

New platforms

- GNU/Hurd is now supported.

Tests

Windows
